# serializer version: 1
# name: test_entry_diagnostics
  dict({
    'config_entry': dict({
      'data': dict({
        'host': '192.168.1.123',
        'mac': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'modern_forms',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': 'AA:BB:CC:DD:EE:FF',
      'version': 1,
    }),
    'device': dict({
      'info': dict({
        'brand': None,
        'client_id': 'MF_000000000000',
        'date_code': '',
        'device_name': 'ModernFormsFan',
        'fan_motor_type': 'DC125X25',
        'fan_type': '1818-56',
        'federated_identity': 'us-east-1:f3da237b-c19c-4f61-b387-0e6dde2e470b',
        'firmware_url': '',
        'firmware_version': '01.03.0025',
        'light_type': 'F6IN-120V-R1-30',
        'mac_address': '**REDACTED**',
        'main_mcu_firmware_version': '01.03.3008',
        'owner': '**REDACTED**',
        'product_sku': '',
        'production_lot_number': '',
      }),
      'status': dict({
        'adaptive_learning_enabled': False,
        'away_mode_enabled': False,
        'decommission': False,
        'factory_reset': False,
        'fan_direction': 'forward',
        'fan_on': True,
        'fan_sleep_timer': 0,
        'fan_speed': 3,
        'fan_timer': None,
        'light_brightness': 50,
        'light_color_temp_kelvin': None,
        'light_fixtures': list([
          dict({
            'address': None,
            'brightness': 50,
            'color_temp_kelvin': None,
            'fixture_type': None,
            'max_color_temp_kelvin': None,
            'min_color_temp_kelvin': None,
            'name': '',
            'on': True,
          }),
        ]),
        'light_on': True,
        'light_sleep_timer': 0,
        'light_timer': None,
        'reset_rf_pair_list': False,
        'rf_pair_mode_active': False,
        'schedule': '**REDACTED**',
        'user_data': '**REDACTED**',
        'wind': None,
        'wind_speed': 2,
      }),
    }),
  })
# ---
# name: test_entry_diagnostics_gen4
  dict({
    'config_entry': dict({
      'data': dict({
        'host': '192.168.1.123',
        'mac': '**REDACTED**',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'modern_forms',
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Mock Title',
      'unique_id': 'AA:BB:CC:00:11:22',
      'version': 1,
    }),
    'device': dict({
      'info': dict({
        'brand': None,
        'client_id': '',
        'date_code': '',
        'device_name': 'ModernFormsFan',
        'fan_motor_type': '',
        'fan_type': '2603-56',
        'federated_identity': '',
        'firmware_url': '',
        'firmware_version': '01.03.0025',
        'light_type': 'gen4',
        'mac_address': '**REDACTED**',
        'main_mcu_firmware_version': '01.03.3008',
        'owner': '**REDACTED**',
        'product_sku': '',
        'production_lot_number': '',
      }),
      'status': dict({
        'adaptive_learning_enabled': False,
        'away_mode_enabled': False,
        'decommission': False,
        'factory_reset': False,
        'fan_direction': 'forward',
        'fan_on': True,
        'fan_sleep_timer': 0,
        'fan_speed': 3,
        'fan_timer': None,
        'light_brightness': 80,
        'light_color_temp_kelvin': 3000,
        'light_fixtures': list([
          dict({
            'address': 2,
            'brightness': 80,
            'color_temp_kelvin': 3000,
            'fixture_type': 0,
            'max_color_temp_kelvin': 5000,
            'min_color_temp_kelvin': 2700,
            'name': '**REDACTED**',
            'on': True,
          }),
          dict({
            'address': 3,
            'brightness': 50,
            'color_temp_kelvin': 4000,
            'fixture_type': 0,
            'max_color_temp_kelvin': 5000,
            'min_color_temp_kelvin': 2700,
            'name': '**REDACTED**',
            'on': False,
          }),
        ]),
        'light_on': True,
        'light_sleep_timer': 0,
        'light_timer': None,
        'reset_rf_pair_list': False,
        'rf_pair_mode_active': False,
        'schedule': '',
        'user_data': '',
        'wind': False,
        'wind_speed': 3,
      }),
    }),
  })
# ---
